; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ocrdma/extr_ocrdma_hw.c_ocrdma_process_qpcat_error.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ocrdma/extr_ocrdma_hw.c_ocrdma_process_qpcat_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocrdma_dev = type { i32 }
%struct.ocrdma_qp = type { i32 }

@IB_QPS_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocrdma_dev*, %struct.ocrdma_qp*)* @ocrdma_process_qpcat_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ocrdma_process_qpcat_error(%struct.ocrdma_dev* %0, %struct.ocrdma_qp* %1) #0 {
  %3 = alloca %struct.ocrdma_dev*, align 8
  %4 = alloca %struct.ocrdma_qp*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ocrdma_dev* %0, %struct.ocrdma_dev** %3, align 8
  store %struct.ocrdma_qp* %1, %struct.ocrdma_qp** %4, align 8
  %7 = load i32, i32* @IB_QPS_ERR, align 4
  store i32 %7, i32* %5, align 4
  %8 = load %struct.ocrdma_qp*, %struct.ocrdma_qp** %4, align 8
  %9 = icmp eq %struct.ocrdma_qp* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @BUG()
  br label %12

12:                                               ; preds = %10, %2
  %13 = load %struct.ocrdma_qp*, %struct.ocrdma_qp** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @ocrdma_qp_state_machine(%struct.ocrdma_qp* %13, i32 %14, i32* %6)
  ret void
}

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @ocrdma_qp_state_machine(%struct.ocrdma_qp*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
